Fix saves actions possible overflow on landscape small devices

--- a/src/styles/partials/_components.scss
+++ b/src/styles/partials/_components.scss
@@ -1,10 +1,3 @@
-%menu-container {
-	background-color: var(--menu-container);
-	box-shadow: var(--menu-shadow);
-	position: relative;
-	padding: 1rem;
-	scrollbar-gutter: stable both-edges;
-}
 %info-box {
 	color: #ffffffe8;
 	background-color: #010e2470;
