--- a/src/styles/saves.scss
+++ b/src/styles/saves.scss
@@ -9,7 +9,7 @@
 		"buttons buttons";
 	grid-template-columns: 3fr 1fr;
 	grid-template-rows: min-content 1fr min-content;
-	column-gap: 2rem;
+	column-gap: 1rem;
 
 	.page-title {
 		grid-area: title;
@@ -101,8 +101,9 @@
 	}
 
 	.info {
-		@extend %menu-container;
 		grid-area: info;
+		padding: 0;
+		scrollbar-gutter: unset;
 		overflow: hidden;
 		display: flex;
 		flex-direction: column;
@@ -120,6 +121,9 @@
 		.deta {
 			display: flex;
 			flex-direction: column;
+			padding: 1em;
+			min-height: 130px;
+			justify-content: flex-end;
 
 			.actions {
 				align-self: flex-end;
